--- a/portfolio.html
+++ b/portfolio.html
@@ -31,79 +31,142 @@
     <main class="portfolio-section-work-examples">
         <section>
             <h1 hidden>Фильтр</h1>
-            <ul class="list">
+            <ul class="list ">
                 <li>
-                    <button class="portfolio-filter-all current" type="button">Все</button>
+                    <button class="portfolio-filter-all button-properties" type="button">Все</button>
                 </li>
                 <li>
-                    <button class="portfolio-filter current" type="button">Веб-сайты</button>
+                    <button class="portfolio-filter button-properties" type="button">Веб-сайты</button>
                 </li>
                 <li>
-                    <button class="portfolio-filter current" type="button">Приложения</button>
+                    <button class="portfolio-filter button-properties" type="button">Приложения</button>
                 </li>
                 <li>
-                    <button class="portfolio-filter current" type="button">Дизайн</button>
+                    <button class="portfolio-filter button-properties" type="button">Дизайн</button>
                 </li>
                 <li>
-                    <button class="portfolio-filter current" type="button">Маркетинг</button>
+                    <button class="portfolio-filter button-properties" type="button">Маркетинг</button>
                 </li>
             </ul>
             </section>
             <section>
             <ul class="list">
                 <li>
-                    <img src="./images/portfolio1.jpg" alt="Изображение ноутбука на котором открыта сраница сайта технокряк"
-                        width="370" height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio1.jpg" 
+                        alt="Изображение ноутбука на котором открыта сраница сайта технокряк"
+                        width="370" 
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header">Технокряк</h2>
                     <p class="portfolio-work-example-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio2.jpg" alt="Изображение как двое мужчин играют в баскетбол" width="370"
-                        height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio2.jpg" 
+                        alt="Изображение как двое мужчин играют в баскетбол" 
+                        width="370"
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
                     <p class="portfolio-work-example-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio3.jpg" alt="Изображение рыбы с надписью названия ресторана" width="370"
-                        height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio3.jpg" 
+                        alt="Изображение рыбы с надписью названия ресторана" 
+                        width="370"
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header">Ресторан<span lang="en"> Seafood</span></h2>
                     <p class="portfolio-work-example-text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio4.jpg" alt="Изображение наушников черного цвета" width="370" height="294" />
+                    <a class="link current" href="">
+                        <img src="./images/portfolio4.jpg" 
+                        alt="Изображение наушников черного цвета" 
+                        width="370" 
+                        height="294" 
+                    />
+                    </a>
                     <h2 class="portfolio-work-example-header">Проект<span lang="en"> Prime</span></h2>
                     <p class="portfolio-work-example-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio5.jpg" alt="Изображение двух бумажніх коробок белого и коричневого цвета"
-                        width="370" height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio5.jpg" 
+                        alt="Изображение двух бумажніх коробок белого и коричневого цвета"
+                        width="370" 
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header">Проект<span lang="en"> Boxes</span></h2>
                     <p class="portfolio-work-example-text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio6.jpg" alt="Изображение монитора на котором открыт веб-сайт компании" width="370"
-                        height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio6.jpg" 
+                        alt="Изображение монитора на котором открыт веб-сайт компании" 
+                        width="370"
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header"><span lang="en">Inspiration has no Borders</span></h2>
                     <p class="portfolio-work-example-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio7.jpg" alt="Изображение расскрытой книги" width="370" height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio7.jpg" 
+                        alt="Изображение расскрытой книги" 
+                        width="370" 
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header">Издание<span lang="en"> Limited Edition</span></h2>
                     <p class="portfolio-work-example-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio7.jpg" alt="Изображение расскрытой книги" width="370" height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio7.jpg"
+                        alt="Изображение расскрытой книги" 
+                        width="370" 
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header">Издание<span lang="en"> Limited Edition</span></h2>
                     <p class="portfolio-work-example-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio8.jpg" alt="Изображение бумажной бирки с надписью" width="370" height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio8.jpg" 
+                        alt="Изображение бумажной бирки с надписью" 
+                        width="370" 
+                        height="294" 
+                        />
+                    </a>  
                     <h2 class="portfolio-work-example-header">Проект<span lang="en"> LAB</span></h2>
                     <p class="portfolio-work-example-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio9.jpg" alt="Изображение рук которые печатают на нойтбуке" width="370"
-                        height="294" />
+                    <a class="link current" href="">
+                        <img 
+                        src="./images/portfolio9.jpg" 
+                        alt="Изображение рук которые печатают на нойтбуке" 
+                        width="370"
+                        height="294" 
+                        />
+                    </a>
                     <h2 class="portfolio-work-example-header"><span lang="en">Growing Business</span></h2>
                     <p class="portfolio-work-example-text">Приложение</p>
                 </li>
